# claude-qgenda-plugin

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  docker-compose.yml  justfile  pyproject.toml  qgenda_core.py  server.py
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: qgenda
git-hooks/: pre-commit
package/: install.sh
scripts/: qgenda_query.py
skills/qgenda/: SKILL.md
skills/qgenda/references/: api-reference.md
skills/qgenda/scripts/: qgenda_core.py  qgenda_query.py
tests/: test_core.py
