[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-qgenda-plugin"
version = "0.1.0"
description = "QGenda scheduling skill for Claude Code and Claude Desktop (MCP)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "qgendapy>=0.1.1",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "qgenda_core.py"]

[project.scripts]
claude-qgenda-plugin = "server:mcp.run"
